Title, year, realisator and date of films

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
               <tr>
                 <th> Titre </th>
                 <th> Année </th>
+                <th> Sortie </th>
+                <th> Réalisateur </th>
                 <th> &nbsp; </th>
               </tr>
             </thead>
