--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <th> Année </th>
                 <th> Sortie </th>
                 <th> Réalisateur </th>
+                <th> Acteurs </th>
                 <th> &nbsp; </th>
               </tr>
             </thead>
@@ -60,6 +61,7 @@
   </footer>
   <script src="node_modules/slugg/slugg.js"></script>
   <script src="main.js"></script>
+  <script src="fuseki.js"></script>
 </body>
 
 </html>
